--- a/templates/index.html
+++ b/templates/index.html
@@ -30,6 +30,26 @@
             <button id="send-button">Send</button>
         </div>
     </div>
+    <script>
+        // Get CSRF token from Django's csrf_token tag
+        function getCookie(name) {
+            let cookieValue = null;
+            if (document.cookie && document.cookie !== '') {
+                const cookies = document.cookie.split(';');
+                for (let i = 0; i < cookies.length; i++) {
+                    const cookie = cookies[i].trim();
+                    // Does this cookie string begin with the name we want?
+                    if (cookie.substring(0, name.length + 1) === (name + '=')) {
+                        cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+                        break;
+                    }
+                }
+            }
+            return cookieValue;
+        }
+        const csrftoken = getCookie('csrftoken');
+    </script>
+    {% csrf_token %}
 
     <script>
         const chatMessages = document.getElementById('chat-messages');
@@ -80,6 +100,7 @@
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
+                        'X-CSRFToken': csrftoken,
                     },
                     body: JSON.stringify(payload),
                 });
